@@ -3,7 +3,7 @@ package com.example.java.test.junior.developer.mapper;
 import com.example.java.test.junior.developer.dto.UserDto;
 import com.example.java.test.junior.developer.dto.UserRequestDto;
 import com.example.java.test.junior.developer.model.User;
-import java.util.Arrays;
+import java.util.List;
 import org.keycloak.representations.idm.CredentialRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.stereotype.Component;
@@ -39,12 +39,13 @@ public class UserMapper {
   public UserRepresentation toUserRepresentation(UserRequestDto userRequestDto) {
     var user = new UserRepresentation();
     user.setEmail(userRequestDto.getEmail());
+    user.setUsername(userRequestDto.getFirstName());
     user.setEnabled(true);
     var credential = new CredentialRepresentation();
     credential.setType(CredentialRepresentation.PASSWORD);
     credential.setValue(userRequestDto.getPassword());
     credential.setTemporary(false);
-    user.setCredentials(Arrays.asList(credential));
+    user.setCredentials(List.of(credential));
     return user;
   }
 }
